# fibonacci_api

./: README.md  setup.cfg
integration_testing/: try_with_requests.py
src/fibonacci/: __init__.py  blacklist.py  fibonacci_math.py  main.py
tests/: blacklist_test.py  fibonacci_test.py
