[metadata]
name = fibonacci_api
version = 0.1.0
author = Balint Kovari
author_email = your.email@example.com
description = A short description of your package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your_username/your_package_name
license = Unlicense

[options]
packages = find:
install_requires =
    requests
    bottle
    # List your project dependencies here

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fibonacci_server = fibonacci.main:main
